[Refactor] : Cars 객체 makeCars 동작 방식 수정
unmodifiableList 로 반환해 첫번째 생성 이후 add, remove 방지